--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,24 @@
-torch~=2.5.1
-numpy~=1.26.4
-scikit-learn~=1.5.2
-pandas~=2.2.3
-tqdm~=4.67.1
-hmeasure~=0.1.6
-catboost~=1.2.7
-lightgbm~=4.5.0
-xgboost~=2.1.3
-tabpfn~=2.0.3
-category-encoders~=2.6.4
-PyYAML~=6.0.2
+catboost==1.2.7
+category_encoders==2.6.4
+hmeasure==0.1.6
+hyperopt==0.2.7
+imbalanced_learn==0.13.0
+lifelines==0.30.0
+lightgbm==4.6.0
+matplotlib==3.10.3
+numpy==2.3.0
+optuna==4.3.0
+pandas==2.3.0
+pytest==8.4.1
+pytorch_tabnet==4.1.0
+PyYAML==6.0.2
+PyYAML==6.0.2
+scikit_learn==1.7.0
+seaborn==0.13.2
+setuptools==75.8.0
+streamlit==1.46.0
+tabpfn==2.0.8
+tabpfn_client==0.1.7
+torch==2.5.1
+tqdm==4.67.1
+xgboost==3.0.2
