add tabpfn_auto to config

--- a/config/CONFIG_METHOD.yaml
+++ b/config/CONFIG_METHOD.yaml
@@ -17,10 +17,11 @@ methods:
     lr: false         # Logistic Regression (LR)
     rf: false         # Random Forest (RF)
     svm: false        # Support Vector Machine (SVM)
-    tabnet: true     # TabNet
+    tabnet: false     # TabNet
     tabpfn: false     # TabPFN foundation model
     tabpfn_rf: false  # TabPFN tuned with RandomForest
     tabpfn_hpo: false  # automatic tuning capabilities for TabPFN models using Bayesian optimization via Hyperopt
+    tabpfn_auto: true # AutoTabPFN
     xgb: false        # Extreme Gradient Boosting (XGBoost)
   # lgd methods
   lgd:
