project setup and structure improvements

--- a/config/CONFIG_DATA.yaml
+++ b/config/CONFIG_DATA.yaml
@@ -1,4 +1,4 @@
-# Description: Dataset selection (only 1 dataset at a time)
+# Dataset selection (only 1 dataset at a time)
 dataset_pd:
   00_pd_toydata: false
   # pd datasets
