--- a/config/CONFIG_METHOD.yaml
+++ b/config/CONFIG_METHOD.yaml
@@ -9,20 +9,20 @@ methods:
     ann: false        # Artificial Neural Networks (ANN)
     bnb: false        # Bernoulli Naive Bayes (BNB)
     cb: false         # CatBoost (CB)
-    dt: false         # Decision Tree (DT)
+    dt: true         # Decision Tree (DT)
     gnb: false        # Gaussian Naive Bayes (GNB)
     knn: false        # K-Nearest Neighbors (KNN)
     lda: false        # Linear Discriminant Analysis (LDA)
     lgbm: false       # LightGBM (LGBM)
     lr: false         # Logistic Regression (LR)
-    rf: false         # Random Forest (RF)
+    rf: true         # Random Forest (RF)
     svm: false        # Support Vector Machine (SVM)
     tabnet: false     # TabNet
     tabpfn: false     # TabPFN foundation model
     tabpfn_rf: false  # TabPFN tuned with RandomForest
     tabpfn_hpo: false  # automatic tuning capabilities for TabPFN models using Bayesian optimization via Hyperopt
-    tabpfn_auto: true # AutoTabPFN
-    xgb: false        # Extreme Gradient Boosting (XGBoost)
+    tabpfn_auto: false # AutoTabPFN
+    xgb: false         # Extreme Gradient Boosting (XGBoost)
   # lgd methods
   lgd:
     ab: true          # AdaBoost Regression (AB)
