--- a/config/CONFIG_TUNING.yaml
+++ b/config/CONFIG_TUNING.yaml
@@ -1,6 +1,6 @@
-tune_hyperparameters: true    # true: tune hyperparameters, false: use base models
+tune_hyperparameters: true    # true: tune hyperparameters, false: use base models with default parameters
 tuning_method: 'optuna'       # optuna | grid | none: use stored hyperparameters
-n_trials: 20
+n_trials: 20                  # number of trials for tuning
 
 tuning_params:
   # pd parameters
