--- a/requirements.txt
+++ b/requirements.txt
@@ -2,24 +2,25 @@ catboost==1.2.8
 category_encoders==2.6.4
 hmeasure==0.1.6
 hyperopt==0.2.7
-imbalanced_learn==0.13.0
+imblearn
 lifelines==0.30.0
 lightgbm==4.6.0
-matplotlib==3.10.3
-numpy==2.3.1
+matplotlib
+numpy
 optuna==4.3.0
-pandas==2.3.1
+pandas
 plotly==6.0.1
 pytest==8.4.1
 pytorch_tabnet==4.1.0
 PyYAML==6.0.2
 PyYAML==6.0.2
-scikit_learn==1.7.0
+scikit_learn
 seaborn==0.13.2
 setuptools==75.8.0
 streamlit==1.45.1
 tabpfn==2.0.8
 tabpfn_client==0.1.7
+tabpfn-extensions[all] @ git+https://github.com/PriorLabs/tabpfn-extensions.git
 torch==2.5.1
 tqdm==4.67.1
-xgboost==3.0.2
+xgboost
