--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,20 @@
-catboost==1.2.8
-category_encoders==2.6.4
+catboost>=1.2.5
+category_encoders==2.8.1
 hmeasure==0.1.6
-hyperopt==0.2.7
-imblearn
-lifelines==0.30.0
-lightgbm==4.6.0
-matplotlib
-numpy
-optuna==4.3.0
-pandas
-plotly==6.0.1
-pytest==8.4.1
-pytorch_tabnet==4.1.0
-PyYAML==6.0.2
-PyYAML==6.0.2
-scikit_learn
-seaborn==0.13.2
-setuptools==75.8.0
-streamlit==1.45.1
-tabpfn==2.0.8
-tabpfn_client==0.1.7
+imbalanced-learn>=0.13.0
+lightgbm>=4.3.0
+matplotlib>=3.9.0
+numpy>=2.1.0
+optuna>=4.0.0
+pandas>=2.2.2
+plotly>=5.22.0
+pytorch-tabnet==4.1.0
+PyYAML>=6.0.1
+scikit-learn>=1.5.0
+seaborn>=0.13.2
+streamlit>=1.32.0
+tabpfn==2.1.2
 tabpfn-extensions[all] @ git+https://github.com/PriorLabs/tabpfn-extensions.git
-torch==2.5.1
-tqdm==4.67.1
-xgboost
+torch>=2.4.0
+tqdm>=4.66.0
+xgboost>=2.1.0
