--- a/config/CONFIG_METHOD.yaml
+++ b/config/CONFIG_METHOD.yaml
@@ -1,41 +1,58 @@
-missing_values: 3     # 0: don't handle missing values, 1: drop rows with missing values, 2: impute with mode(cat) and mean(num), 3: impute with median(num) and mode(cat)
-encode_cat: 1         # 0: no encoding, 1: one-hot, 2: WoE encoding
-standardize: 1        # 0: no standardization, 1: standardnormal distribution, 2: min-max scaling
+# ============================================================
+# CONFIG_METHOD.yaml
+# ============================================================
+# This configuration file controls which models are included in
+# the experiments for both PD (classification) and LGD (regression) tasks.
+#
+# - Set each method to `true` to include it in the benchmark.
+# - Set to `false` to exclude it.
+# - Methods are grouped as: classical, deep tabular, and foundation models.
+# ============================================================
 
 methods:
-  # pd methods
+
+  # ----------------------------------------------------------
+  # Probability of Default (PD) – Classification Methods
+  # ----------------------------------------------------------
   pd:
-    ab: false         # AdaBoost (AB)
-    ann: false        # Artificial Neural Networks (ANN)
-    bnb: false        # Bernoulli Naive Bayes (BNB)
-    cb: false         # CatBoost (CB)
-    dt: false         # Decision Tree (DT)
-    gnb: false        # Gaussian Naive Bayes (GNB)
-    knn: false        # K-Nearest Neighbors (KNN)
-    lgbm: false       # LightGBM (LGBM)
-    lr: false         # Logistic Regression (LR)
-    rf: false         # Random Forest (RF)
-    svm: false        # Support Vector Machine (SVM)
-    tabnet: false     # TabNet
-    tabpfn: false     # TabPFN foundation model
-    tabpfn_rf: false  # TabPFN tuned with RandomForest
-    tabpfn_hpo: true  # automatic tuning capabilities for TabPFN models using Bayesian optimization via Hyperopt
-    tabpfn_auto: false # AutoTabPFN
-    xgb: false         # Extreme Gradient Boosting (XGBoost)
-  # lgd methods
+    # -----------------------------
+    # Classical Machine Learning
+    # -----------------------------
+    cb: false           # CatBoost
+    knn: false          # K-Nearest Neighbors
+    lgbm: false         # LightGBM
+    logreg: false       # Logistic Regression
+    nb: false           # Naive Bayes
+    rf: false           # Random Forest
+    svm: false          # Support Vector Machine
+    xgb: false          # Extreme Gradient Boosting
+    ncm: false          # Nearest Class Mean
+    dummy: false        # Dummy baseline classifier
+
+    # -----------------------------
+    # Deep / Neural / Transformer-based Methods
+    # -----------------------------
+    mlp: false           # Multilayer Perceptron
+    tabnet: false        # TabNet
+    tabpfn: true         # TabPFN foundation model
+
+  # ----------------------------------------------------------
+  # Loss Given Default (LGD) – Regression Methods
+  # ----------------------------------------------------------
   lgd:
-    ab: true          # AdaBoost Regression (AB)
-    ann: true         # Artificial Neural Networks (ANN)
-    cb: true          # CatBoost Regression (CB)
-    dt: true          # Decision Tree Regression (DT)
-    en: true          # Elastic Net Regression (EN)
-    knn: true         # K-Nearest Neighbors Regression (KNN)
-    lgbm: true        # LightGBM Regression (LGBM)
-    lr: true          # Linear Regression (LR)
-    rf: true          # Random Forest Regression (RF)
-    svr: true         # Support Vector Regression (SVR)
-    tabnet: true      # TabNet Regression (TabNet)
-    tabpfn: true      # TabPFN Regression (TabPFN)
-    tabpfn_rf: true   # TabPFN Random Forest Regressor
-    tabpfn_hpo: false # automatic tuning capabilities for TabPFN models using Bayesian optimization via Hyperopt
-    xgb: true         # Extreme Gradient Boosting Regression (XGB)
+    # -----------------------------
+    # Classical Machine Learning
+    # -----------------------------
+    cb: false            # CatBoost
+    knn: false           # K-Nearest Neighbors
+    lgbm: false          # LightGBM
+    lr: false            # Linear Regression
+    rf: false            # Random Forest
+    xgb: false           # Extreme Gradient Boosting
+
+    # -----------------------------
+    # Deep / Neural / Transformer-based Methods
+    # -----------------------------
+    mlp: false            # Multilayer Perceptron
+    tabnet: false         # TabNet
+    tabpfn: false         # TabPFN foundation model
