--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,42 @@
-# --- Core scientific stack ---
-numpy>=1.24
-pandas>=2.0
-PyYAML>=6.0
-tqdm>=4.65
-scipy>=1.10
-scikit-learn>=1.3
+# ============================================
+# Core scientific stack
+# ============================================
+numpy==1.26.4
+pandas==2.2.2
+scipy==1.13.0
+scikit-learn==1.4.2
+tqdm==4.66.4
+PyYAML==6.0.1
 statsmodels>=0.14
 notebook>=7.0
 
-# --- Torch + TALENT ---
-torch==2.0.1  # TALENT requires exactly 2.0.1
+# ============================================
+# Torch + TALENT (installed from GitHub)
+# ============================================
+torch==2.0.1          # required by TALENT (use CPU wheel on macOS if needed)
 TALENT @ git+https://github.com/LAMDA-Tabular/TALENT.git@main
 
-# --- Data preprocessing ---
-category_encoders>=2.6
-imbalanced-learn>=0.11
-optuna>=3.3
+# ============================================
+# Data preprocessing & optimization
+# ============================================
+category_encoders==2.6.3
+imbalanced-learn==0.11.0
+optuna==3.6.1
 
-# --- Visualization ---
-matplotlib>=3.7
-seaborn>=0.13
-plotly>=5.17
-streamlit>=1.29
+# ============================================
+# Visualization (for notebooks, diagnostics, Streamlit app)
+# ============================================
+matplotlib==3.9.2
+seaborn==0.13.2
+plotly==5.22.0
+streamlit==1.36.0
 
-# --- Evaluation ---
-hmeasure>=0.1.6
+# ============================================
+# Evaluation utilities
+# ============================================
+hmeasure==0.1.6
 
-# --- Utilities ---
+# ============================================
+# Misc / Utilities
+# ============================================
 typing_extensions>=4.8
